--- a/ExamCsharpMikkel.csproj
+++ b/ExamCsharpMikkel.csproj
@@ -6,6 +6,8 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <StartupObject>ExamCsharpMikkel.Program</StartupObject>
+    <!--StartupObject>TestRunner</StartupObject--> 
+    </PropertyGroup>
 
 </Project>
