Added interfacing, this is fun! ... but wont build now :(

--- a/ExamCsharpMikkel.csproj
+++ b/ExamCsharpMikkel.csproj
@@ -6,8 +6,8 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
-    <!--StartupObject>ExamCsharpMikkel.Program</StartupObject-->
-    <StartupObject>TestRunner</StartupObject> 
+    <StartupObject>ExamCsharpMikkel.Program</StartupObject>
+    <!--StartupObject>TestRunner</StartupObject--> 
     </PropertyGroup>
 
   <ItemGroup>
